--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,7 +117,16 @@ footer {
 
 /***** BOOKS/INDEX *****/
 
-.jumbotron h1 {
+.h1title {
+  margin-bottom: 0;
+  border-radius: 0;
+  background: #D4CEBB;
+  color: #000000;
+  padding: 1% 0;
+  border: 0;
+}
+
+.h1title h2 {
   padding-left: 5%;
 }
 
@@ -136,6 +145,7 @@ section {
 }
 
 .newBookLink {
+  padding-top: 2%;
   padding-bottom: 2%;
 }
 
@@ -145,6 +155,33 @@ section {
   width: 100%;
   padding: 10%;
 }
+
+/***** BOOKS/SHOW *****/
+.bookSelection {
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+.bookShow img, .bookShow p1, .bookShow p2, .bookShow p3, .bookShow p4 {
+  float: left;
+  display: inline;
+}
+
+.bookShow img {
+  padding: 0%;
+  margin-right: 20px;
+}
+
+.fas:hover {
+  text-decoration: none;
+  color: #023347;;
+}
+
+
+.adminActions .btn {
+  margin: 5px;
+}
+
 
 @media (max-width: 600px) {
   .centered {
