--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="../images/logo.png"></a>
+                <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
             </div>
             <div>
                 <div class="collapse navbar-collapse" id="booksNavbar">
