--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -23,12 +23,14 @@
             </div>
             <div class="col-sm-6">
                 <div class="adminActions">
+                    <% if ( authenticated ) { %>
                     <legend>Adminstrator Controls</legend>
                     <a href="/books/<%= book.id %>/edit" class="btn btn-primary">Edit</a>             
                     <form action="/books/<%= book.id %>/delete" method="post"  onsubmit="return confirm('Are you sure you want to delete this product?');">
                         <input type="hidden" name="id" value="<%= book.id %>">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
+                    <% } %>
                 </div>
             </div>
         </div>
