--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,8 +25,12 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/">Home</a></li>
                         <li><a href="/books">Books</a></li>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Login</a></li>
+                        <% if ( !authenticated ) { %>
+                        <li><a href="/users/new">Register</a></li>
+                        <li><a href="/sessions/new">Login</a></li>
+                        <% } else { %>
+                        <li><a href="/sessions/delete">Logout</a></li>
+                        <% } %>
                     </ul>
                 </div>
             </div>
